base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: "neo4j"
    app.kubernetes.io/instance: neo4j
  name: neo4j
spec:
  serviceName: "neo4j"
  podManagementPolicy: "Parallel" # This setting means that the StatefulSet controller doesn't block applying changes until the existing Pod is READY.
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: "neo4j"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "neo4j"
        app.kubernetes.io/component: "neo4j-instance" # used for anti affinity rules
        app.kubernetes.io/instance: "neo4j"        
      annotations:
        "checksum/neo4j-config": 4515b6b0a67a75f3dca456ec7f00b827b2686f63789b6e5b13e2686a4fc8b00b        
    spec:      
      affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchLabels:
                    app: "neo4j"
                    app.kubernetes.io/component: "neo4j-instance"
                topologyKey: kubernetes.io/hostname
      securityContext: 
        fsGroup: 7474
        fsGroupChangePolicy: Always
        runAsGroup: 7474
        runAsNonRoot: true
        runAsUser: 7474
      terminationGracePeriodSeconds: 3600            
      containers:
        - name: "neo4j"
          image: "neo4j:5.10.0-enterprise"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 7474
              name: http
            - containerPort: 7687
              name: bolt
            - containerPort: 7473
              name: https
            - containerPort: 6362
              name: backup
          securityContext: 
              runAsGroup: 7474
              runAsNonRoot: true
              runAsUser: 7474
          volumeMounts:
            - mountPath: "/config/neo4j.conf"
              name: neo4j-conf
            - mountPath: "/config/server-logs.xml"
              name: neo4j-server-logs
            - mountPath: "/config/user-logs.xml"
              name: neo4j-user-logs                            
            - mountPath: "/backups"
              name: "data"
              subPathExpr: "backups"
            - mountPath: "/data"
              name: "data"
              subPathExpr: "data"
            - mountPath: "/import"
              name: "data"
              subPathExpr: "import"
            - mountPath: "/licenses"
              name: "data"
              subPathExpr: "licenses"
            - mountPath: "/logs"
              name: "data"
              subPathExpr: "logs/$(POD_NAME)"
            - mountPath: "/metrics"
              name: "data"
              subPathExpr: "metrics/$(POD_NAME)"            
          readinessProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 20
            timeoutSeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 40
            timeoutSeconds: 10
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 1000
            periodSeconds: 5
      volumes:
        - name: neo4j-conf
          projected:
            defaultMode: 0440
            sources:
              - configMap:
                  name: "neo4j-default-config"
              - configMap:
                  name: "neo4j-user-config"
              - configMap:
                  name: "neo4j-k8s-config"
        - name: neo4j-server-logs
          configMap:
            name: "neo4j-server-logs-config"
        - name: neo4j-user-logs
          configMap:
            name: "neo4j-user-logs-config" 
        - name: "data"
          persistentVolumeClaim:
            claimName: "neo4j-pvc"
