base/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: "neo4j-service-admin"
  labels:
    app.kubernetes.io/name: "neo4j-service"
    app.kubernetes.io/instance: "neo4j-server-1"
spec:
  publishNotReadyAddresses: true
  type: "ClusterIP"
  selector:
    app.kubernetes.io/instance: "neo4j-server-1"
  ports:
    - protocol: TCP
      port: 6362
      targetPort: 6362
      name: tcp-backup
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: tcp-bolt
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: tcp-http
    - protocol: TCP
      port: 7473
      targetPort: 7473
      name: tcp-https
