base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "neo4j-service"
  labels:
    app.kubernetes.io/name: "neo4j"
    app.kubernetes.io/service: "neo4j"    
  annotations:
spec:
  type: "LoadBalancer"
  externalTrafficPolicy: Local
  sessionAffinity: None
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: http
    - protocol: TCP
      port: 7473
      targetPort: 7473
      name: https
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: tcp-bolt
  selector:
    app: "neo4j"
